--- a/nazacbar/package.json
+++ b/nazacbar/package.json
@@ -15,6 +15,7 @@
     "react-native": "^0.71.7",
     "react-native-hyperlink": "^0.0.22",
     "react-native-web": "^0.19.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
@@ -46,7 +47,6 @@
     ]
   },
   "options": {
-    "proxy": "https://localhost:8081"
+    "proxy": "https://localhost:8084"
   }
-  
 }
