--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-native": "^0.71.8"
+    "react-native": "^0.71.8",
+    "react-native-hyperlink": "^0.0.22"
   }
 }
