--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-native": "^0.71.7",
+    "react-native": "^0.71.8",
     "react-native-hyperlink": "^0.0.22",
     "react-native-web": "^0.19.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "styled-component": "^2.8.0",
     "styled-components": "^5.3.10",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
