--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.10",
     "swiper": "^9.2.0",
